# KnoSphere

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/api/: .env.example  Dockerfile.api  Dockerfile.prod  database.py  deps.py  main.py  models.py  pyproject.toml  requirements.txt
apps/api/core/: auth.py  database_middleware.py  logger.py
apps/api/schemas/: streaming.py
apps/api/scripts/: setup_security.sql
apps/api/services/: agent_graph.py  agentic_chat.py  embedding.py  graph_extractor.py  graph_rag.py  langsmith_integration.py  llm.py  n8n_tools.py  rerank.py  search.py  streaming_protocol.py  tools.py
apps/api/tasks/: celery_app.py  cleanup_tasks.py  document_tasks.py
apps/web/: next.config.ts  package.json
apps/web/src/app/: layout.tsx  page.css  page.tsx
apps/web/src/app/graph/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: agentic-chat-box.tsx  chat-box.tsx  document-preview.tsx  file-upload.tsx  graph-rag-query.tsx  knowledge-graph.tsx  monitoring-dashboard.tsx  thinking-process.tsx
apps/web/src/components/[id]/: page.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: use-toast.ts
apps/web/src/lib/: auth.ts
