# 根目录下的 pyproject.toml
[project]
name = "intelligent-kb-root"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.128.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "redis>=7.1.0",
    "sqlmodel>=0.0.32",
]

[tool.uv.workspace]
members = ["apps/api", "packages/py-shared"]

[env]
PYTHON_JIT = "1"

[tool.uv]
# 强制开启 Python 3.12 的实验性 JIT 编译器以实现最高 20% 的提速
# env-vars = { "PYTHON_JIT" = "1" }